Change rgl.* to *3d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,12 @@ importFrom(graphics,hist)
 importFrom(graphics,plot)
 importFrom(grDevices,contourLines)
 importFrom(grDevices,chull)
-importFrom(rgl,rgl.clear)
-importFrom(rgl,rgl.bg)
-importFrom(rgl,rgl.spheres)
-importFrom(rgl,rgl.texts)
-importFrom(rgl,rgl.quads)
-importFrom(rgl,rgl.lines)
+importFrom(rgl,clear3d)
+importFrom(rgl,bg3d)
+importFrom(rgl,spheres3d)
+importFrom(rgl,text3d)
+importFrom(rgl,quads3d)
+importFrom(rgl,segments3d)
 importFrom(feature,featureSignif)
 importFrom(misc3d,drawScene.rgl)
 importFrom(misc3d,contour3d)
